Fixed overlap in elements in footer

--- a/public/navbar.css
+++ b/public/navbar.css
@@ -4,9 +4,9 @@
     border-top-color: grey;
     display: inline-block;
     text-align: center;
-    width: 20%;
+    width: 18%;
     padding: 4px;
-    margin: -6px;
+    margin-bottom: -8px;
 }
 .add-btn {
     color: grey;    
@@ -14,12 +14,12 @@
     border-top-color: grey;
     display: inline-block;
     text-align: center;
-    width: 20%;
-    padding: 4px;
-    margin: -6px;
+    width: 18%;
+    padding: 0px;
+    margin-bottom: -8px;
 }
-.caption {
+.footer-btn .caption {
     display:block;
     text-size-adjust:auto;
-    font-size: 1.5vw;
+    font-size: 2vw;
 }
